EN-91: fixed david lynch image is displayed at the wrong size & resolution on smaller screen width

--- a/app/styles/_background.scss
+++ b/app/styles/_background.scss
@@ -4,7 +4,7 @@
   left               : 0;
   width              : 100%;
   height             : 100%;
-  // background-image: url( '../images/cover-poster-2015.jpg' );
+  background-image   : url('../images/bg-lynch-hidef.jpg') !important;
   background-repeat  : no-repeat;
   background-position: center center;
   background-size    : cover;
